--- a/working_folder/package.json
+++ b/working_folder/package.json
@@ -19,9 +19,11 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@reduxjs/toolkit": "^1.9.3",
     "compressorjs": "^1.2.1",
+    "dexie": "^3.2.4",
     "localforage": "^1.10.0",
     "moment": "^2.29.4",
     "music-metadata-browser": "^2.5.10",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
