--- a/working_folder/package.json
+++ b/working_folder/package.json
@@ -54,6 +54,7 @@
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
-    "vite": "^6.4.1"
+    "vite": "^6.4.1",
+    "vite-plugin-pwa": "^0.20.5"
   }
 }
