--- a/working_folder/package.json
+++ b/working_folder/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ear_bump",
+  "name": "q_music",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.5",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -19,8 +19,8 @@
     "@reduxjs/toolkit": "^1.9.3",
     "compressorjs": "^1.2.1",
     "localforage": "^1.10.0",
-    "music-metadata-browser": "^2.5.10",
     "moment": "^2.29.4",
+    "music-metadata-browser": "^2.5.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -45,7 +45,7 @@
     "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^7.1.0-canary-ec9cc003-20251208",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
